more changes on payment

--- a/templates/ai/get-ideas.html
+++ b/templates/ai/get-ideas.html
@@ -43,8 +43,13 @@
                             </div>
                             <div class="form-group">
                                 <label for="number_of_ideas">Number of Ideas:</label>
-                                <input type="number" name="number_of_ideas" id="number_of_ideas" placeholder="Provide Number of ideas you need">
+                                <input type="number" name="number_of_ideas" id="number_of_ideas" placeholder="Provide Number of ideas you need", required>
                                 <small class="small text-danger" id="number_of_ideas_error"></small>
+                            </div>
+                            <div class="form-group">
+                                <label for="referal_code">Referal Code:</label>
+                                <input type="text" name="referal_code" id="referal_code" placeholder="e.g VS-JEF">
+                                <small class="small">If refered, please provide the referal Code</small>
                             </div>
                             <div class="form-group">
                                 <textarea name="description" placeholder="Provide optional details of the kind of ideas you need."></textarea>
