started working on projects

--- a/templates/404.html
+++ b/templates/404.html
@@ -4,7 +4,7 @@
 <!-- page-404,  18:22:11 GMT -->
 <head>
 <meta charset="utf-8">
-<title>404 Error | Errors | VSTech Limited</title>
+<title>404 Error - Errors - VSTech Limited</title>
 <!-- Stylesheets -->
 <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 <link href="/static/plugins/revolution/css/settings.css" rel="stylesheet" type="text/css">
@@ -36,7 +36,7 @@
                             <h3 class="error-page__sub-title">Page not found!</h3>
                         </div>
                         <p class="error-page__text">Sorry we can't find that page! The page you are looking <br> for
-                            was never existed.</p>
+                            never existed.</p>
                         <form class="error-page__form" action="{% url 'search' %}">
                             <div class="error-page__form-input">
                                 <input type="search" placeholder="Search here">
