--- a/templates/assignments/partials/js.html
+++ b/templates/assignments/partials/js.html
@@ -14,7 +14,7 @@
 
  <!-- Page level custom scripts -->
  <script src="/static/sb/js/demo/chart-area-demo.js"></script>
- <script src="/static/sb/js/demo/chart-pie-demo.js"></script>
+ <!-- <script src="/static/sb/js/demo/chart-pie-demo.js"></script> -->
  <script src="/static/sb/js/demo/chart-bar-demo.js"></script>
 
 <!-- Page level plugins -->
