--- a/templates/assignments/dashboard.html
+++ b/templates/assignments/dashboard.html
@@ -5,7 +5,8 @@
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
     <div>
-    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-info shadow-sm" data-toggle="modal" data-target="#placeAnOrder"><i class="fas fa-file-alt fa-sm text-white-50"></i> Place an Order</a>
+    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-success shadow-sm" data-toggle="modal" data-target="#ProjectModel"><i class="fas fa-file-alt fa-sm text-white-50"></i> Leave a Project</a>
+    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-info shadow-sm" data-toggle="modal" data-target="#AssignmentModel"><i class="fas fa-file-alt fa-sm text-white-50"></i> Leave Assignment(s)</a>
     <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal" data-target="#getCode"><i class="fas fa-code fa-sm text-white-50"></i> Get Code</a>
     </div>
 </div>
@@ -61,7 +62,7 @@
             <!-- Card Body -->
             <div class="card-body">
                 <div class="chart-pie pt-4 pb-2">
-                    <canvas id="myPieChart"></canvas>
+                    <canvas id="myPieChart2"></canvas>
                 </div>
                 <div class="mt-4 text-center small">
                     <span class="mr-2">
@@ -81,5 +82,56 @@
         </div>
     </div>
 </div>
+<div id="completed-count" data-count="{{ completed_orders }}"></div>
+<div id="cancelled-count" data-count="{{ cancelled_orders }}"></div>
+<div id="pending-count" data-count="{{ pending_orders }}"></div>
 
+{% endblock %}
+
+{% block js %}
+<script>
+    
+// Set new default font family and font color to mimic Bootstrap's default styling
+Chart.defaults.global.defaultFontFamily = 'Nunito', '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
+Chart.defaults.global.defaultFontColor = '#858796';
+var data_list = []
+var completed_orders = parseInt(document.getElementById("completed-count").getAttribute("data-count"));
+var cancelled_orders = parseInt(document.getElementById("cancelled-count").getAttribute("data-count"));
+var pending_orders = parseInt(document.getElementById("pending-count").getAttribute("data-count"));
+data_list[0] = completed_orders;
+data_list[1] = cancelled_orders;
+data_list[2] = pending_orders;
+
+var ctx = document.getElementById("myPieChart2");
+var myPieChart = new Chart(ctx, {
+  type: 'doughnut',
+  data: {
+    labels: ["Completed", "Cancelled", "Pending"],
+    datasets: [{
+      data: data_list,
+      backgroundColor: ['#1cc88a', '#e74a3b', '#f6c23e'],
+      hoverBackgroundColor: ['#17a673', '#e02d1b', '#f4b619'],
+      hoverBorderColor: "rgba(234, 236, 244, 1)",
+    }],
+  },
+  options: {
+    maintainAspectRatio: false,
+    tooltips: {
+      backgroundColor: "rgb(255,255,255)",
+      bodyFontColor: "#858796",
+      borderColor: '#dddfeb',
+      borderWidth: 1,
+      xPadding: 15,
+      yPadding: 15,
+      displayColors: false,
+      caretPadding: 10,
+    },
+    legend: {
+      display: false
+    },
+    cutoutPercentage: 80,
+  },
+});
+</script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 {% endblock %}
