--- a/templates/assignments/leave-assignment.html
+++ b/templates/assignments/leave-assignment.html
@@ -5,33 +5,33 @@
             {% csrf_token %}
             <div class="d-flex justify-content-between align-items-center">
                 <b class="h3 text-dark font-weight-bold">Amount</b>
-                <h1><span id="calculated-amount">Ksh. 0</span></h1>
+                <h1><span id="ass-calculated-amount">Ksh. 0</span></h1>
             </div>
             <div class="form-group">
                 <div class="mb-3 mb-sm-0">
-                    <label for="title">Title*</label>
-                    <input type="text" class="form-control" id="title" placeholder="Enter Assignment Title" name="title" required/>
+                    <label for="ass-title">Title*</label>
+                    <input type="text" class="form-control" id="ass-title" placeholder="Enter Assignment Title" name="title" required/>
                 </div>
             </div>
             <div class="form-group">
                 <div class="mb-3 mb-sm-0">
-                    <label for="code">Referal Code</label>
-                    <input type="text" class="form-control" id="code" placeholder="If refered, please enter, CODE e.g VS-JEF" name="referal_code"/>
+                    <label for="ass-code">Referal Code</label>
+                    <input type="text" class="form-control" id="ass-code" placeholder="If refered, please enter, CODE e.g VS-JEF" name="referal_code"/>
                 </div>
             </div>
             <div class="form-group">
-                <label for="academic_level">Select Academic Level*</label>
-                <select name="academic_level" id="academic_level" class="form-control" required>
+                <label for="ass-academic_level">Select Academic Level*</label>
+                <select name="academic_level" id="ass-academic_level" class="form-control" required>
                         <option value="" selected>-----------</option>
                     {% for level in academic_level %}
-                        <option value="{{ level.id }}">{{ level }}</option>
+                        <option value="{{ level.id }}" data-charge-rate="{{ level.charge_rate }}">{{ level }}</option>
                     {% endfor %}
                 </select>
             </div>
             <div class="form-group row">
                 <div class="col-sm-6 mb-3 mb-sm-0">
-                    <label for="subject_area">Subject Area</label>
-                    <select name="subject_area" id="subject_area" class="form-control">
+                    <label for="ass-subject_area">Subject Area</label>
+                    <select name="subject_area" id="ass-subject_area" class="form-control">
                         <option value="" selected>-----------</option>
                         {% for subject in subject_area %}
                             <option value="{{ subject.id }}">{{ subject }}</option>
@@ -39,22 +39,22 @@
                     </select>
                 </div>
                 <div class="col-sm-6">
-                    <label for="period">Select Job Duration*</label>
-                    <select name="period" id="period" class="form-control" required>
+                    <label for="ass-period">Select Job Duration*</label>
+                    <select name="period" id="ass-period" class="form-control" required>
                         <option value="" selected>-----------</option>
                         {% for ass_period in period %}
-                            <option value="{{ ass_period.id }}">{{ ass_period }}</option>
+                            <option value="{{ ass_period.id }}" data-rate="{{ ass_period.rate }}">{{ ass_period }}</option>
                         {% endfor %}
                     </select>
                 </div>
             </div>
             <div class="form-group">
-                <label for="description">Provide Additional Information</label>
-                <textarea name="additional_information" id="description" class="form-control" rows="5"></textarea>
+                <label for="ass-description">Provide Additional Information</label>
+                <textarea name="additional_information" id="ass-description" class="form-control" rows="5"></textarea>
             </div>
             <div class="form-group">
-                <label for="files">Attach Assignment File(s)(<small>if any</small>)</label>
-                <input type="file" name="files" id="files" class="form-control border-0" multiple />
+                <label for="ass-files">Attach Assignment File(s)(<small>if any</small>)</label>
+                <input type="file" name="files" id="ass-files" class="form-control border-0" multiple />
             </div>
             <button class="btn btn-primary btn-block">Leave Assignment</button>
         </form>
